[package]
name = "redox_liner"
version = "0.6.0" # remember to update README
authors = [
    "MovingtoMars <definitelynotliam@gmail.com>",
    "Michael Aaron Murphy <mmstickman@gmail.com>",
    "AdminXVII <dev.xlheureux@gmail.com>",
    "Jeremy Soller <jackpot51@gmail.com>",
]
description = "A library offering readline-like functionality."
repository = "https://gitlab.redox-os.org/redox-os/liner"
homepage = "https://gitlab.redox-os.org/redox-os/liner"
keywords = ["readline", "line", "input", "editor", "completion"]
license = "MIT"
exclude = [
    "CONTRIBUTING.md",
    ".travis.yml",
]
edition = "2021"
resolver = "2"

[lib]
name = "liner"

[dependencies]
bytecount = "0.6"
termion = "3.0"
unicode-width = "0.1"
itertools = "0.12"
strip-ansi-escapes = "0.2"

[dev-dependencies]
regex = "1.10"
